--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,22 @@
 {
   "env": {
     "browser": true,
-    "es6": true,
+    "es2021": true,
+    "node": true,
     "jest": true
   },
-  "extends": "airbnb-base",
+  "extends": "eslint:recommended",
+  "overrides": [
+    {
+      "files": ["**/*/*.test.js"],
+      "plugins": ["jest"],
+      "extends": ["plugin:jest/recommended"],
+      "rules": { "jest/prefer-expect-assertions": "off" }
+    }
+  ],
   "parserOptions": {
-    "ecmaVersion": 2018,
+    "ecmaVersion": "latest",
     "sourceType": "module"
-  }
+  },
+  "rules": {}
 }
